# distributed_system

./: .gitignore  CMakeLists.txt  main.cpp  setup.sh
docs/: connection.md
network_simulator/: CMakeLists.txt  connection_list.cpp  connection_list.hpp  network.cpp
network_simulator/client_module/: client.cpp  client.hpp
network_simulator/network_module/: connection_binder.cpp  connection_binder.hpp  connection_channel.cpp  connection_channel.hpp  connection_list.hpp  network.cpp
proto/: messages.proto
